Some more changes to the manifest tile and the zip file

--- a/Manifest/manifest.json
+++ b/Manifest/manifest.json
@@ -15,7 +15,7 @@
     "outline": "outline.png"
   },
   "name": {
-    "short": "Scrum Status Bot"
+    "short": "Redapt Scrum Status Bot"
   },
   "description": {
     "short": "Redapt Scrum Status Bot helps you get status updates from your team in group.",
